--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WJE-commerce - Produtos Selecionados</title>
- <link rel="stylesheet" href="../css/style.css?v=1">
+<link rel="stylesheet" href="css/style.css?v=1">
 
 </head>
 <body>
@@ -38,8 +38,8 @@
 
   <main class="produtos"></main>
 
-<script src="../js/produtos.js"></script>
-<script src="../js/main.js"></script>
+<script src="js/produtos.js"></script>
+<script src="js/main.js"></script>
 
 
   <footer>
