Atualiza lista de produtos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div class="slide"><img src="assets/img/livros.png" alt=""></div>
     <div class="slide"><img src="assets/img/nutricao.png" alt=""></div>
     <div class="slide"><img src="assets/img/promocaonatal.png" alt=""></div>
+    <div class="slide"><img src="assets/img/mercadolivre100_.png" alt=""></div>
+    <div class="slide"><img src="assets/img/mercadolivrefrete.png" alt=""></div>
   </div>
 </section>
 
